--- a/posts/030525.md
+++ b/posts/030525.md
@@ -9,7 +9,7 @@ date: "May 03, 2025"
 1. You are both your greatest enemy and your closest friend.
 2. When asking someone a question, first share your own thoughts—then ask what they think.
 3. When making a decision, don’t just think about the choice—think about the consequences it brings.
-4. Life is a ultramarathon not a 300-meter sprint, always think long-term.
+4. Life is an ultramarathon, not a 300-meter sprint; always think long-term.
 5. No one can harm you more than you can.
 6. You can meaningfully connect with at most 150 people—see [Dunbar's Number](https://en.wikipedia.org/wiki/Dunbar%27s_number)
 7. Being alone doesn't mean being lonely—you’re with your best friend: yourself.
